Fixed header spacing issues when 'xs' and removed subtitle on xs

--- a/css/src/ccij.css
+++ b/css/src/ccij.css
@@ -27,6 +27,8 @@ a {
     border-radius: 0 !important;
     background-image: none !important;
     background-color: transparent !important;
+    text-transform: uppercase;
+    padding: 10px 35px !important;
 }
 
 .navbar-nav-override a:hover {
